--- a/app/views/nanomaterials-1149/team-members.html
+++ b/app/views/nanomaterials-1149/team-members.html
@@ -25,7 +25,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p id="responsible-person-hint" class="govuk-hint govuk-!-font-size-16">
-                  Laboris anim exercitation id velit officia consectetur labore duis magna proident in ipsum non magna.
+                  A team member is someone who can submit cosmetic product notifications on behalf of the Responsible Person.
                 </p>
                 <details class="govuk-details opss-details--sm" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -33,8 +33,10 @@
                       Help with team members
                     </span>
                   </summary>
-                  <div class="govuk-details__text">
-                    Quis esse ut culpa nostrud laborum labore sint eiusmod culpa. Ullamco eiusmod anim non Lorem fugiat commodo commodo id veniam tempor amet voluptate labore. Ullamco qui consequat veniam non ex velit occaecat consectetur quis elit qui reprehenderit. Cupidatat sit dolor voluptate nulla consectetur laboris consequat reprehenderit amet sint qui cupidatat aliquip. Culpa ad consequat veniam dolore velit ex id elit. Velit tempor cupidatat enim laborum incididunt deserunt dolore in cillum minim ullamco et tempor adipisicing. Fugiat et aliqua non dolore proident magna exercitation deserunt anim magna irure. Aute consequat ipsum occaecat pariatur. Pariatur consectetur qui ullamco dolor enim ipsum amet exercitation est nisi enim est.
+                  <div class="govuk-details__text govuk-!-width-three-quarters">
+                    <p class="govuk-body-s">
+                      <!--A team member can view all of the cosmetic product notifications that have been notified for the Responsible Person, which they have been invited to.-->
+                      When a team member has been invited, they can view all of the cosmetic product notifications that have been notified for the Responsible Person. (Team members will not be able to view cosmetic product notifications for a Responsible Person they have not been invited to).</p>
                   </div>
                 </details>
             </div>
