--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,12 @@
       <h3 class="govuk-heading-m">Nanomaterials</h3>
       <p class="govuk-body-s">For these flat HTML files the nav active state is set to the nanomaterials page.</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Cosmetic products</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Cosmetic products</a>
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01.html" target="_blank">Cosmetic products alt 01</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none.html" target="_blank">Cosmetic products alt 01 (0 incomplete)</a></li>
+          </ul>
+        </li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a>
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html" target="_blank">Nanomaterial details</a></li>
