--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -24,7 +24,7 @@
         </div>
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <p id="nanomaterials-hint" class="govuk-hint govuk-!-font-size-16">
+                <p id="nanomaterials-hint" class="govuk-hint govuk-!-width-two-thirds">
                   These are your notified nanomaterials.
                 </p>
             </div>
