--- a/app/views/nanomaterials-1149/responsible-person.html
+++ b/app/views/nanomaterials-1149/responsible-person.html
@@ -26,7 +26,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <p id="responsible-person-hint" class="govuk-hint govuk-!-font-size-16">
+                <p id="responsible-person-hint" class="govuk-hint govuk-!-width-two-thirds">
                     The responsible person can be a business, individual or sole trader and has one or more people assigned as a contact.
                 </p>
             </div>
