--- a/app/views/nanomaterials-1149/team-members.html
+++ b/app/views/nanomaterials-1149/team-members.html
@@ -24,7 +24,7 @@
         </div>
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <p id="responsible-person-hint" class="govuk-hint govuk-!-font-size-16">
+                <p id="responsible-person-hint" class="govuk-hint govuk-!-width-two-thirds">
                   A team member is someone who can submit cosmetic product notifications on behalf of the Responsible Person.
                 </p>
                 <details class="govuk-details opss-details--sm" data-module="govuk-details">
