--- a/app/views/cosmetics-search-designs/search-page-01.html
+++ b/app/views/cosmetics-search-designs/search-page-01.html
@@ -537,10 +537,10 @@
 </div>
 <script>
     document.getElementById("opss-reset").addEventListener("click", function(){
-            var $selects = document.getElementById("category");
+            var selects = document.getElementById("category");
 
-            $selects.querySelector("[selected]").removeAttribute("selected");
-            $selects[0].setAttribute("selected", "selected"); //classList.add('xxxxxxxxxxx')
+            selects.querySelector("[selected]").removeAttribute("selected");
+            selects[0].setAttribute("selected", "selected"); //classList.add('xxxxxxxxxxx')
         }
     );
 
