--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -426,6 +426,9 @@
                     <span>Previous page</span><span class="govuk-visually-hidden">:</span> <span>Page 1 of 3</span>
                 </a>
             </li>
+            <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
+                Page 2
+            </li>
             <li class="opss-pagination-link__wrap opss-pagination-link--next">
                 <a href="" class="govuk-link govuk-link--no-visited-state">
                     <span>Next page</span><span class="govuk-visually-hidden">:</span> <span>Page 3 of 3</span>
