--- a/app/views/nanomaterials-1149/team-members.html
+++ b/app/views/nanomaterials-1149/team-members.html
@@ -25,7 +25,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p id="responsible-person-hint" class="govuk-hint govuk-!-width-two-thirds">
-                  A team member is someone who can submit cosmetic product notifications on behalf of the Responsible Person.
+                  A team member is someone who can notify cosmetic product notifications on behalf of the Responsible Person.
                 </p>
                 <details class="govuk-details opss-details--sm" data-module="govuk-details">
                   <summary class="govuk-details__summary">
@@ -35,8 +35,11 @@
                   </summary>
                   <div class="govuk-details__text govuk-!-width-three-quarters">
                     <p class="govuk-body-s">
-                      <!--A team member can view all of the cosmetic product notifications that have been notified for the Responsible Person, which they have been invited to.-->
-                      When a team member has been invited, they can view all of the cosmetic product notifications that have been notified for the Responsible Person. (Team members will not be able to view cosmetic product notifications for a Responsible Person they have not been invited to).</p>
+                      When a team member has been invited, they can view all of the cosmetic product notifications that have been notified for the Responsible Person. (Team members will not be able to view cosmetic product notifications for a Responsible Person they have not been invited to).
+                    </p>
+                    <p class="govuk-body-s">
+                      To remove team member accounts email <a class="govuk-link govuk-link--no-visited-state" href="mailto:opss.enquiries@beis.gov.uk">opss.enquiries@beis.gov.uk</a>.
+                    </p>
                   </div>
                 </details>
             </div>
@@ -114,11 +117,7 @@
   ]
 }) }}
 
-<hr class="govuk-section-break govuk-section-break--l">
 
-<p class="govuk-body-s">
-  For help managing team member accounts email <a class="govuk-link govuk-link--no-visited-state" href="mailto:opss.enquiries@beis.gov.uk">opss.enquiries@beis.gov.uk</a>.
-</p>
 
     </div>
 </div>
