--- a/app/views/opss-nav.html
+++ b/app/views/opss-nav.html
@@ -7,7 +7,7 @@
   <nav class="govuk-width-container" aria-label="Main">
     <ul class="opss-top-nav">
       <li>
-        <a class="govuk-link govuk-link--no-visited-state" href="cosmetic-products">Cosmetic products</a>
+        <a class="govuk-link govuk-link--no-visited-state" href="cosmetic-products-alt-01">Cosmetic products</a>
       </li>
       <li class="opss-top-nav__item--active">
         <a aria-current="page" class="govuk-link govuk-link--no-visited-state" href="nanomaterials">Nanomaterials</a>
