--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html
@@ -36,162 +36,29 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-<!-- *************************************** incomplete + errors starts ****************************************************** -->
-{% set errorsTblHTML %}
-<div class="govuk-grid-column-full-width">
-  <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right">
-    Dismiss all errors
-  </a>
-</div>
+<!-- *************************************** incomplete starts ****************************************************** -->
 
-{{ govukTable({
-  classes: "govuk-!-margin-bottom-4 opss-table opss-table--last-col-right opss-table--first-col-normal",
-  caption: "List of notification errors",
-  captionClasses: "govuk-visually-hidden",
-  firstCellIsHeader: true,
-  head: [
-    {
-      text: "File"
-    },
-    {
-      text: "Reason"
-    },
-    {
-      text: "Action"
-    },
-    {
-      html: '<span class="govuk-visually-hidden">Dismiss</span>'
-    }
-  ],
-  rows: [
-    [
-      {
-        html: "Loremipsumipsum"
-      },
-      {
-        text: "The uploaded file is not a ZIP file"
-      },
-      {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload <span class="govuk-visually-hidden">the Loremipsumipsum zip file </span>again</a>'
-      },
-      {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">the Loremipsumipsum error</span></a>'
-      }
-    ],
-    [
-      {
-        html: 'ipsumlorem'
-      },
-      {
-        text: "The uploaded file is not a ZIP file"
-      },
-      {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload <span class="govuk-visually-hidden">the ipsumlorem zip file </span>again</a>'
-      },
-      {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">the ipsumlorem error</span></a>'
-      }
-    ],
-    [
-      {
-        html: 'Loremipsum'
-      },
-      {
-        text: "The uploaded file is not a ZIP file"
-      },
-      {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload <span class="govuk-visually-hidden">the Loremipsum zip file </span>again</a>'
-      },
-      {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">the Loremipsum error</span></a>'
-      }
-    ]
-  ]
-}) }}
-{% endset -%}
+  <div class="opss-border-top govuk-!-padding-top-3 govuk-!-margin-bottom-4">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
+      Incomplete notifications (0)
+    </h2>
+    <p class="govuk-body">
+      There are currently no incomplete notifications.
+    </p>
+  </div>
 
-{% set incompleteTblHTML %}
-{{ govukTable({
-  classes: "govuk-!-margin-bottom-4 opss-table opss-table--last-col-right opss-table--first-col-normal",
-  caption: "List of incomplete notified products",
-  captionClasses: "govuk-visually-hidden",
-  firstCellIsHeader: true,
-  head: [
-    {
-      text: "Product"
-    },
-    {
-      text: "Created"
-    },
-    {
-      html: '<abbr>UK</abbr> <span class="govuk-visually-hidden">cosmetic product </span>number'
-    },
-    {
-      html: '<span class="govuk-visually-hidden">Continue</span>'
-    }
-  ],
-  rows: [
-    [
-      {
-        html: 'Tesco shower gel'
-      },
-      {
-        text: "20 April 2021"
-      },
-      {
-        text: 'UKCP-3459222'
-      },
-      {
-        html: '<a href="#go-to-the-incomplete-product-page" class="govuk-link govuk-link--no-visited-state">Continue<span class="govuk-visually-hidden"> Tesco shower gel notification</span></a>'
-      }
-    ],
-    [
-      {
-        html: 'Johnson&apos;s hair spray xc330'
-      },
-      {
-        text: "13 May 2021"
-      },
-      {
-        text: 'UKCP-8826113'
-      },
-      {
-        html: '<a href="#go-to-the-incomplete-product-page" class="govuk-link govuk-link--no-visited-state">Continue<span class="govuk-visually-hidden"> the Johnson&apos;s hair spray xc330 notification</span></a>'
-      }
-    ]
-  ]
-}) }}
-{% endset -%}
+<!-- *************************************** incomplete ends ****************************************************** -->
 
-{{ govukAccordion({
-  id: "accordion-default",
-  classes: "opss-accordian__open-remove govuk-!-margin-bottom-0",
-  items: [
-    {
-      heading: {
-        text: "Incomplete notifications (2)"
-      },
-      summary: {
-        html: '<p class="govuk-body govuk-!-margin-bottom-1">There are currently 2 incomplete notifications.</p>'
-      },
-      content: {
-        html: incompleteTblHTML
-      }
-    },
-    {
-      heading: {
-        text: "Errors (3)"
-      },
-      summary: {
-        html: '<p class="govuk-body govuk-!-margin-bottom-1">There are currently 3 notification errors.</p>'
-      },
-      content: {
-        html: errorsTblHTML
-      }
-    }
-  ]
-}) }}
-<!-- *************************************** incomplete + errors ends ****************************************************** -->
+<!-- *************************************** errors starts ****************************************************** -->
+  <div class="opss-border-top govuk-!-padding-top-3 opss-border-bottom ">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
+      Errors (0)
+    </h2>
+    <p class="govuk-body">
+      There are currently no notification errors.
+    </p>
+  </div>
+<!-- *************************************** errors ends ****************************************************** -->
 
 <!-- *************************************** notified starts ****************************************************** -->
 <div class="govuk-grid-row">
